2018-12-31  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #24022]
	* sysdeps/unix/sysv/linux/riscv/flush-icache.c: Check if
	<asm/syscalls.h> exists with __has_include__ before including it.

2019-01-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #24018]
	* intl/dcigettext.c (DCIGETTEXT): Do not return NULL on asprintf
	failure.

2018-12-31  Florian Weimer  <fw@deneb.enyo.de>

	[BZ #24027]
	* malloc/malloc.c (_int_realloc): Always call memcpy for the
	copying operation.  (ncopies had the wrong type, resulting in an
	integer wraparound and too few elements being copied.)

2018-12-28  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/alpha/fpu/libm-test-ulps: Regenerated.

2018-12-18  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    James Clarke  <jrtc27@jrtc27.com>

	[BZ #23967]
	* sysdeps/unix/sysv/linux/kernel_sigaction.h (HAS_SA_RESTORER):
	Define if SA_RESTORER is defined.
	(kernel_sigaction): Define sa_restorer if HAS_SA_RESTORER is defined.
	(SET_SA_RESTORER, RESET_SA_RESTORER): Define iff the macro are not
	already defined.
	* sysdeps/unix/sysv/linux/m68k/kernel_sigaction.h (SA_RESTORER,
	kernel_sigaction, SET_SA_RESTORER, RESET_SA_RESTORER): Remove
	definitions.
	(HAS_SA_RESTORER): Define.
	* sysdeps/unix/sysv/linux/sparc/kernel_sigaction.h (SA_RESTORER,
	SET_SA_RESTORER, RESET_SA_RESTORER): Remove definition.
	(HAS_SA_RESTORER): Define.
	* sysdeps/unix/sysv/linux/nios2/kernel_sigaction.h: Include generic
	kernel_sigaction after define SET_SA_RESTORER and RESET_SA_RESTORER.
	* sysdeps/unix/sysv/linux/powerpc/kernel_sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/kernel_sigaction.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sigaction.c: Likewise.

2018-10-30  Andreas Schwab  <schwab@suse.de>

	[BZ #23125]
	* sysdeps/riscv/start.S (ENTRY_POINT): Mark ra as undefined.
	Don't use tail call.
	* elf/tst-unwind-main.c: New file.
	* elf/Makefile (tests): Add tst-unwind-main.
	(CFLAGS-tst-unwind-main.c): Define.
